err/kea.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/fantail'...
Listing './lib/python3.5/site-packages/fantail-0.2.5.egg-info'...
Listing './lib/python3.5/site-packages/humanize'...
Listing './lib/python3.5/site-packages/humanize/locale'...
Listing './lib/python3.5/site-packages/humanize/locale/fr_FR'...
Listing './lib/python3.5/site-packages/humanize/locale/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/humanize/locale/ko_KR'...
Listing './lib/python3.5/site-packages/humanize/locale/ko_KR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/humanize/locale/ru_RU'...
Listing './lib/python3.5/site-packages/humanize/locale/ru_RU/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/humanize-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/kea'...
Compiling './lib/python3.5/site-packages/kea/__init__.py'...
***   File "./lib/python3.5/site-packages/kea/__init__.py", line 109
    print "# Command mode\n"
                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/kea/etc'...
Listing './lib/python3.5/site-packages/kea/etc/app'...
Listing './lib/python3.5/site-packages/kea/plugin'...
Listing './lib/python3.5/site-packages/kea/plugin/cl_parser'...
Compiling './lib/python3.5/site-packages/kea/plugin/cl_parser/__init__.py'...
***   File "./lib/python3.5/site-packages/kea/plugin/cl_parser/__init__.py", line 81
    print k, v, kcard, kmeta
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/kea/plugin/cl_parser/parsers'...
Compiling './lib/python3.5/site-packages/kea/plugin/cl_parser/parsers/tester.py'...
***   File "./lib/python3.5/site-packages/kea/plugin/cl_parser/parsers/tester.py", line 127
    print "{}{}{}{} : {}".format(testresult, mustfail, success, tres, line)
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/kea/plugin/core.py'...
***   File "./lib/python3.5/site-packages/kea/plugin/core.py", line 7
    print x
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/kea/plugin/executor_pbs.py'...
***   File "./lib/python3.5/site-packages/kea/plugin/executor_pbs.py", line 91
    print " ".join(pbs_cl)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/kea/plugin/executor_simple.py'...
***   File "./lib/python3.5/site-packages/kea/plugin/executor_simple.py", line 509
    print " ".join(cl)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/kea/plugin/logger.py'...
***   File "./lib/python3.5/site-packages/kea/plugin/logger.py", line 135
    print pre + fs.format(k, v)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/kea/plugin/register.py'...
***   File "./lib/python3.5/site-packages/kea/plugin/register.py", line 52
    print "set default:"
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/kea-0.0.28.egg-info'...
Listing './lib/python3.5/site-packages/leip'...
Listing './lib/python3.5/site-packages/leip-0.3.3.egg-info'...
Listing './lib/python3.5/site-packages/lockfile'...
Listing './lib/python3.5/site-packages/lockfile-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psutil'...
Listing './lib/python3.5/site-packages/psutil/tests'...
Listing './lib/python3.5/site-packages/psutil-5.4.3.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/toMaKe'...
Listing './lib/python3.5/site-packages/toMaKe-0.6.3.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
